Add sources for 8.6.0